--- a/be/package.json
+++ b/be/package.json
@@ -5,6 +5,8 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
+        "firebase": "^10.5.2",
+        "firebase-admin": "^11.11.0",
         "http": "^0.0.1-security",
         "node": "^20.7.0"
     }
